Add POC Lakehouse project to portfolio with description and GitHub link

--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
     <h2>Projets</h2>
 
     <div class="project-card">
+      <img src="images\POC lakehouse.drawio.png" alt="SuperFlowSQL" class="project-image">
+      <div class="project-info">
+        <h3>POC Lakehouse</h3>
+        <p>Ce projet est un Proof of Concept (POC) d'une architecture de données moderne ("Modern Data Stack") utilisant Docker pour orchestrer l'ingestion, le stockage, la transformation et la visualisation des données.</p>
+        <a href="https://github.com/wisdom3D/Data_project_poc" target="_blank">Voir sur GitHub</a>
+      </div>
+    </div>
+
+    <div class="project-card">
       <img src="images/superflowsql.webp" alt="SuperFlowSQL" class="project-image">
       <div class="project-info">
         <h3>SuperFlowSQL</h3>
